added parking spot

--- a/app/views/parking_lots/_parking_lot.html.erb
+++ b/app/views/parking_lots/_parking_lot.html.erb
@@ -5,5 +5,7 @@
     Maximim spots: <%= parking_lot.max_spots %>
     <br/>
     <%= button_to 'View Entrances', parking_lot_entrances_url(parking_lot), method: :get %>
+    <br/>
+    <%= button_to 'View Spots', parking_lot_spots_url(parking_lot), method: :get %>
   </p>
 </div>
