cars management added

--- a/app/views/parking_lots/index.html.erb
+++ b/app/views/parking_lots/index.html.erb
@@ -1,4 +1,6 @@
 <p style="color: green"><%= notice %></p>
+<%= link_to "Go to Cars List", cars_path %>
+<br/>
 <%= link_to "Create Parking Lot", new_parking_lot_path %>
 
 <h1>Parking lots</h1>
