--- a/app/views/parking_lots/show.html.erb
+++ b/app/views/parking_lots/show.html.erb
@@ -3,9 +3,11 @@
 <%= render @parking_lot %>
 
 <div>
-  <%= link_to "Edit", edit_parking_lot_path(@parking_lot) %>
+  <%= link_to "Create Ticket", new_parking_lot_ticket_path(@parking_lot) %>
   <br/>
   <%= link_to "Back to parking lots", parking_lots_path %>
+  <br/>
+  <%= link_to "Edit Parking Lot", edit_parking_lot_path(@parking_lot) %>
   <br/>
   <%= button_to "Delete", @parking_lot, method: :delete %>
 </div>
