--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -4,7 +4,9 @@
 <br/>
 <%= link_to "Add a Car", new_car_path %>
 
-<h1>Cars</h1>
+<h3>Cars</h3>
+
+<%= render 'colors' %>
 
 <div id="cars">
   <table>
