--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -10,7 +10,7 @@
   <table>
     <tr>
       <th> ID </th>
-      <th> Slot </th>
+      <th> Parking Spot </th>
       <th> Car Reg. </th>
       <th> Action </th>
     </tr>
